# python-notebook-sample

./: Dockerfile  Env+_EvalKit_Exploration.ipynb  LICENSE  README.md  build.sh  pyproject.toml  run.sh
docs/: how_to_run_in_colab.md  how_to_run_in_docker.md
everactive_envplus/: __init__.py  color.py  everactive_api.py  log.py  utils.py
everactive_envplus/connection/: __init__.py  api_connection.py
notebook/: Everactive_ENVplus_EvalKit_Exploration.ipynb
