[tool.poetry]
name = "everactive_envplus"
version = "0.0.2"
description = "Library to support Everactive ENV+ EvalKit sample Python notebook"
authors = ["Rachel House <rachel.house@everactive.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.5.2"
altair = "^4.2.0"
requests = "^2.28.2"
requests-oauthlib = "^1.3.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"
ipykernel = "^6.20.2"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"